set(MY_LIB_NAME protocol)

PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS zchat_message.proto)

set(PROTOBUF_INCLUDE_DIRS ${PROTOBUF_INCLUDE_DIRS} PARENT_SCOPE)
set(PROTOBUF_LIBRARIES ${PROTOBUF_LIBRARIES} PARENT_SCOPE)
set(PROTO_SRC ${PROTO_SRC} PARENT_SCOPE)
set(PROTO_HEADER ${PROTO_HEADER} PARENT_SCOPE)
set(PROTO_SRCS
    ${PROTO_SRCS}
    "zchat_message.h"
    "zchat_types.h"
    "utils.h")
                            
ADD_LIBRARY( ${MY_LIB_NAME} ${PROTO_SRCS} ${PROTO_HDRS} )
TARGET_LINK_LIBRARIES(${MY_LIB_NAME} ${PROTOBUF_LIBRARIES} )
