project(zchat_server_project)

cmake_minimum_required(VERSION 2.8)

set(LIB_DIR 
    "${CMAKE_CURRENT_SOURCE_DIR}/.."
    )

SET(dep_DIR ${CMAKE_CURRENT_SOURCE_DIR} )

FIND_PACKAGE(dep REQUIRED)
IF(NOT DEP_FOUND)
    MESSAGE(FATAL_ERROR "Dependencies not found")
ENDIF(NOT DEP_FOUND)

INCLUDE(src.cmake)
    
ADD_EXECUTABLE(zchat_server ${SOURCES})

INCLUDE_DIRECTORIES("${LIB_DIR}/common")
INCLUDE_DIRECTORIES("${LIB_DIR}/zmqhelpers")
#INCLUDE_DIRECTORIES("${LIB_DIR}/message")
INCLUDE_DIRECTORIES("${LIB_DIR}/logsystem")

#ADD_SUBDIRECTORY(${LIB_DIR}/message message)

INCLUDE_DIRECTORIES(${ZEROMQ_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${CZEROMQ_INCLUDE_DIR})

ADD_SUBDIRECTORY(${LIB_DIR}/logsystem logsystem)

LINK_DIRECTORIES(${ZEROMQ_LIBRARY})

SET(EXTRA_LIBS ${EXTRA_LIBS} logsystem  ${ZEROMQ_LIBRARY} ${CZEROMQ_LIBRARY})

TARGET_LINK_LIBRARIES(zchat_server  ${EXTRA_LIBS})
